--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
-.Todolist-AddTasks-input{
-    border-color: crimson;
-}
-.Todolist-button-filter{
-    border-color: crimson;
-}
-.Todolist-TasksList-ChekedTrue{
-    opacity: 0.6;
-}
-.App{
-    display: flex;
-}
-.todolist{
-    padding-right: 50px;
-}
+/*.Todolist-AddTasks-input{*/
+/*    border-color: crimson;*/
+/*}*/
+/*.Todolist-button-filter{*/
+/*    border-color: crimson;*/
+/*}*/
+/*.Todolist-TasksList-ChekedTrue{*/
+/*    opacity: 0.6;*/
+/*}*/
+/*.App{*/
+/*    display: flex;*/
+/*}*/
+/*.todolist{*/
+/*    padding-right: 50px;*/
+/*}*/
